Fix version info visibility

--- a/src/ILICheck.Web/ClientApp/src/app.css
+++ b/src/ILICheck.Web/ClientApp/src/app.css
@@ -64,7 +64,7 @@ header {
 }
 
 .version-info {
-  visibility: hidden;
+  display: none;
 }
 
 /************ Protokoll ************/
